--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: cmvnorm
 Type: Package
 Title: The Complex Multivariate Gaussian Distribution
 Version: 1.0-4
-Date: 2014-01-10
+Date: 2018-05-22
 Author: Robin K. S. Hankin
 Depends: emulator (>= 1.2-15)
 Imports: elliptic
@@ -10,3 +10,4 @@ Maintainer: Robin K. S. Hankin <hankin.robin@gmail.com>
 Description: Various utilities for the complex multivariate Gaussian distribution.
 VignetteBuilder: elliptic, emulator
 License: GPL-2
+URL: https://github.com/RobinHankin/cmvnorm.git
