--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: cmvnorm
 Type: Package
 Title: The Complex Multivariate Gaussian Distribution
 Version: 1.0-5
-Date: 2018-05-22
+Date: 2018-08-15
 Author: Robin K. S. Hankin
 Depends: emulator (>= 1.2-15)
 Imports: elliptic
@@ -11,3 +11,4 @@ Description: Various utilities for the complex multivariate Gaussian distributio
 VignetteBuilder: elliptic, emulator
 License: GPL-2
 URL: https://github.com/RobinHankin/cmvnorm.git
+BugReports: https://github.com/RobinHankin/mcmvnorm/issues
