--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: cmvnorm
 Type: Package
 Title: The Complex Multivariate Gaussian Distribution
-Version: 1.0-5
-Date: 2018-08-15
-Author: Robin K. S. Hankin
+Version: 1.0-6
+Authors@R: person(given=c("Robin", "K. S."), family="Hankin", role = c("aut","cre"), email="hankin.robin@gmail.com", comment = c(ORCID = "0000-0001-5982-0415"))
 Depends: emulator (>= 1.2-15)
+Suggests: knitr
 Imports: elliptic
 Maintainer: Robin K. S. Hankin <hankin.robin@gmail.com>
 Description: Various utilities for the complex multivariate Gaussian distribution.
-VignetteBuilder: elliptic, emulator
+VignetteBuilder: knitr
 License: GPL-2
 URL: https://github.com/RobinHankin/cmvnorm.git
 BugReports: https://github.com/RobinHankin/cmvnorm/issues
