--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: cmvnorm
 Type: Package
 Title: The Complex Multivariate Gaussian Distribution
-Version: 1.0-6
+Version: 1.0-7
 Authors@R: person(given=c("Robin", "K. S."), family="Hankin", role = c("aut","cre"), email="hankin.robin@gmail.com", comment = c(ORCID = "0000-0001-5982-0415"))
 Depends: emulator (>= 1.2-21)
 Suggests: knitr
 Imports: elliptic
 Maintainer: Robin K. S. Hankin <hankin.robin@gmail.com>
-Description: Various utilities for the complex multivariate Gaussian distribution.
+Description: Various utilities for the complex multivariate Gaussian distribution and complex Gaussian processes.
 VignetteBuilder: knitr
 License: GPL-2
-URL: https://github.com/RobinHankin/cmvnorm.git
+URL: https://github.com/RobinHankin/cmvnorm
 BugReports: https://github.com/RobinHankin/cmvnorm/issues
