--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: cmvnorm
 Type: Package
 Title: The Complex Multivariate Gaussian Distribution
-Version: 1.0-8
+Version: 1.0-9
 Authors@R: person(given=c("Robin", "K. S."), family="Hankin", role = c("aut","cre"), email="hankin.robin@gmail.com", comment = c(ORCID = "0000-0001-5982-0415"))
-Depends: emulator (>= 1.2-21)
+Depends: quadform (>= 0.0-2), emulator (>= 1.2-21)
 Suggests: knitr
 Enhances: mvtnorm
 Imports: elliptic
